Finished global base styles

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <nav>
                 <div class="small-7 columns">
                     <div class="top-nav right desktop-menu show-for-medium-up">
-                        <a href="#" style="font-size:13px;">CSS</a>
-                        <a href="#">JS</a>
-                        <a href="#">Components</a>
+                        <a href="index.html" style="font-size:13px;">CSS</a>
+                        <a href="javascript.html">JS</a>
+                        <a href="components.html">Components</a>
                     </div>
                     <!-- BURGER DISPLAYS ON SMALL (TABLET / SMARTPHONE) -->
                     <div class="right mobile-menu show-for-small-only">
@@ -78,55 +78,62 @@
         <div class="small-12 medium-9 large-9 columns content">
 
             <!-- TYPOGRAPHY -->
-            <h1 id="typography" data-offset>Typography</h1>
-            <p>The quick brown fox jumped over the lazy dog.</p>
-            <p class="serif">The quick brown fox jumped over the lazy dog.</p>
-            <div class="codex">
-                <h3>Code:</h3>
+            <div class="guide-section">
+                <h2 id="typography" data-offset>Typography</h2>
+                <p>The quick brown fox jumped over the lazy dog.</p>
+                <p class="serif">The quick brown fox jumped over the lazy dog.</p>
+                <div class="codex">
+                    <h3>Code:</h3>
 <pre class="prettyprint lang-html">
 &lt;p&gt;The quick brown fox jumped over the lazy dog.&lt;/p&gt;
 &lt;p class="serif"&gt;The quick brown fox jumped over the lazy dog.&lt;/p&gt;
 </pre>
+                </div>
             </div>
 
             <!-- HEADINGS -->
-            <h1 id="headings" data-offset>Headings</h1>
-            <h1>The quick brown fox jumped over the lazy dog.</h1>
-            <h2>The quick brown fox jumped over the lazy dog.</h2>
-            <h3>The quick brown fox jumped over the lazy dog.</h3>
-            <div class="codex">
-                <h3>Code:</h3>
+            <div class="guide-section">
+                <h2 id="headings" data-offset>Headings</h2>
+                <h1>The quick brown fox jumped over the lazy dog.</h1>
+                <h2>The quick brown fox jumped over the lazy dog.</h2>
+                <h3>The quick brown fox jumped over the lazy dog.</h3>
+                <div class="codex">
+                    <h3>Code:</h3>
 <pre class="prettyprint lang-html">
-&lt;h1&gt;The quick brown fox jumped over the lazy dog.&lt;/h1&gt;
+&lt;h2&gt;The quick brown fox jumped over the lazy dog.&lt;/h2&gt;
 &lt;h2&gt;The quick brown fox jumped over the lazy dog.&lt;/h2&gt;
 &lt;h3&gt;The quick brown fox jumped over the lazy dog.&lt;/h3&gt;
 </pre>
+                </div>
             </div>
 
             <!-- LINKS -->
-            <h1 id="links" data-offset>Links</h1>
-            <p>The <a href="#">quick brown fox</a> jumped over the lazy dog.</p>
-            <p>The quick brown fox jumped over the <a href="#">lazy dog</a>.</p>
-            <div class="codex">
-                <h3>Code:</h3>
+            <div class="guide-section">
+                <h2 id="links" data-offset>Links</h2>
+                <p>The <a href="#">quick brown fox</a> jumped over the lazy dog.</p>
+                <p>The quick brown fox jumped over the <a href="#">lazy dog</a>.</p>
+                <div class="codex">
+                    <h3>Code:</h3>
 <pre class="prettyprint lang-html">
 &lt;p&gt;The &lt;a href="#"&gt;quick brown fox&lt;/a&gt; jumped over the lazy dog.&lt;/p&gt;
 &lt;p&gt;The quick brown fox jumped over the &lt;a href="#"&gt;lazy dog&lt;/a&gt;.&lt;/p&gt;
 </pre>
+                </div>
             </div>
 
             <!-- SKINS -->
-            <h1 id="skins" data-offset>Skins</h1>
-            <div class="dark-gray-border-box">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna.
-                Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
-            </div>
-            <div class="pink-border">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna.
-                Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
-            </div>
-            <div class="codex">
-                <h3>Code:</h3>
+            <div class="guide-section">
+                <h2 id="skins" data-offset>Skins</h2>
+                <div class="dark-gray-border-box">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna.
+                    Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
+                </div>
+                <div class="pink-border">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna.
+                    Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
+                </div>
+                <div class="codex">
+                    <h3>Code:</h3>
 <pre class="prettyprint lang-html">
 &lt;div class="dark-gray-border-box"&gt;
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
@@ -135,42 +142,57 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
 &lt;/div&gt;
 </pre>
+                </div>
             </div>
 
             <!-- BUTTONS -->
-            <h1 id="buttons" data-offset>Buttons</h1>
-            <button>Submit My Order</button>
-            <button class="white-button">Sign Up</button>
-            <div class="codex">
-                <h3>Code:</h3>
+            <div class="guide-section">
+                <h2 id="buttons" data-offset>Buttons</h2>
+                <button>Submit My Order</button>
+                <button class="white-button">Sign Up</button>
+                <div class="codex">
+                    <h3>Code:</h3>
 <pre class="prettyprint lang-html">
 &lt;button&gt;Submit My Order&lt;/button&gt;
 &lt;button class="white-button"&gt;Sign Up&lt;/button&gt;
 </pre>
-            </div>
+                </div>
+            </div><!-- /BUTTONS -->
 
             <!-- FORMS -->
-            <h1 id="forms" data-offset>Forms</h1>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi. Suspendisse pellentesque ultrices ante, porttitor egestas dui tempor nec. Fusce et consectetur mauris. Phasellus vitae condimentum quam. Cras vel eros non risus tincidunt pellentesque. Pellentesque sed velit a purus vestibulum iaculis. Nam consectetur quam lacus, in venenatis massa semper sit amet. Pellentesque aliquet non est ut aliquam. Etiam gravida mauris quam, quis lobortis ipsum venenatis vel. Nam elementum orci pharetra metus tincidunt placerat.<br><br>
-            <div class="codex"><strong>Code:</strong></div>
-            <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi.</pre>
+            <div class="guide-section">
+                <h2 id="forms" data-offset>Forms</h2>
+                <label for="guide-name">Name:</label>
+                <input type="text" id="guide-name" />
+                <p></p>
+                <label for="guide-address">Address:</label>
+                <textarea rows="5" id="guide-address"></textarea>
+                <div class="codex">
+                    <h3>Code:</h3>
+<pre class="prettyprint lang-html">
+&lt;button&gt;Submit My Order&lt;/button&gt;
+&lt;button class="white-button"&gt;Sign Up&lt;/button&gt;
+</pre>
+                </div>
+            </div><!-- /FORMS -->
 
             <!-- ALERTS -->
-            <h1 id="alerts" data-offset>Alerts</h1>
-            <div class="alertMsg">
-                <a href="#" class="alert--close">X</a>
-                <span>Example of standard alert message.</span>
-            </div>
-            <div class="errorMsg">
-                <a href="#" class="alert--close-white">X</a>
-                <span>Example of an error message.</span>
-            </div>
-            <div class="successMsg">
-                <a href="#" class="alert--close-white">X</a>
-                <span>Example of a success message.</span>
-            </div>
-            <div class="codex">
-                <h3>Code:</h3>
+            <div class="guide-section">
+                <h2 id="alerts" data-offset>Alerts</h2>
+                <div class="alertMsg">
+                    <a href="#" class="alert--close">X</a>
+                    <span>Example of standard alert message.</span>
+                </div>
+                <div class="errorMsg">
+                    <a href="#" class="alert--close-white">X</a>
+                    <span>Example of an error message.</span>
+                </div>
+                <div class="successMsg">
+                    <a href="#" class="alert--close-white">X</a>
+                    <span>Example of a success message.</span>
+                </div>
+                <div class="codex">
+                    <h3>Code:</h3>
 <pre class="prettyprint lang-html">
 &lt;div class="alertMsg"&gt;
     &lt;a href="#" class="alert--close"&gt;X&lt;/a&gt;
@@ -185,21 +207,23 @@
     &lt;span&gt;Example of a success message.&lt;/span&gt;
 &lt;/div&gt;
 </pre>
-            </div>
+                </div>
+            </div><!-- /ALERTS -->
 
             <!-- CURRENCY -->
-            <h1 id="currency" data-offset>Currency</h1>
-            <div>
-                <span class="price--symbol">$</span><span class="price--dollars">49</span><span class="price--cents">.99</span>
-            </div>
-            <div class="price-markdown">
-                <span class="price--symbol">$</span><span class="price--dollars">49</span><span class="price--cents">.99</span>
-            </div>
-            <div>
-                <span class="price--symbol price-light">$</span><span class="price--dollars price-light">49</span><span class="price--cents price-light">.99</span>
-            </div>
-            <div class="codex">
-                <h3>Code:</h3>
+            <div class="guide-section">
+                <h2 id="currency" data-offset>Currency</h2>
+                <div>
+                    <span class="price--symbol">$</span><span class="price--dollars">49</span><span class="price--cents">.99</span>
+                </div>
+                <div class="price-markdown">
+                    <span class="price--symbol">$</span><span class="price--dollars">49</span><span class="price--cents">.99</span>
+                </div>
+                <div>
+                    <span class="price--symbol price-light">$</span><span class="price--dollars price-light">49</span><span class="price--cents price-light">.99</span>
+                </div>
+                <div class="codex">
+                    <h3>Code:</h3>
 <pre class="prettyprint lang-html">
 &lt;div&gt;
     &lt;span class="price--symbol"&gt;$&lt;/span&gt;&lt;span class="price--dollars"&gt;49&lt;/span&gt;&lt;span class="price--cents"&gt;.99&lt;/span&gt;
@@ -211,125 +235,10 @@
     &lt;span class="price--symbol price-light"&gt;$&lt;/span&gt;&lt;span class="price--dollars price-light"&gt;49&lt;/span&gt;&lt;span class="price--cents price-light"&gt;.99&lt;/span&gt;
 &lt;/div&gt;
 </pre>
-            </div>
-            <!-- DROPDOWNS -->
-            <!--<h1 id="dropdowns" data-offset>Dropdowns</h1>
-            <div class="dropdowns group margin-bottom">
-                <div class="dropdown floatLeft">
-                    <a class="dropdown-trigger " data-toggle="dropdown" href="#">
-                        Dropdown trigger
-                    </a>
-                    <div class="dropdown-container">
-                        <ul class="dropdown-menu" role="menu">
-                            <li>
-                                <a href="#">Hello There</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">Welcome</a>
-                            </li>
-                            <li>
-                                <a href="#">To My</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown</a>
-                            </li>
-                            <li>
-                                <a href="#">Hello There</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">Welcome</a>
-                            </li>
-                            <li>
-                                <a href="#">To My</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown</a>
-                            </li>
-                            <li>
-                                <a href="#">Hello There</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">Welcome</a>
-                            </li>
-                            <li>
-                                <a href="#">To My</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown</a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
-                <div class="dropdown floatLeft second">
-                    <a class="dropdown-trigger " data-toggle="dropdown" href="#">
-                        Dropdown trigger
-                    </a>
-                    <div class="dropdown-container">
-                        <ul class="dropdown-menu" role="menu">
-                            <li>
-                                <a href="#">Hello There</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">Welcome</a>
-                            </li>
-                            <li>
-                                <a href="#">To My</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown</a>
-                            </li>
-                            <li>
-                                <a href="#">Hello There</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">Welcome</a>
-                            </li>
-                            <li>
-                                <a href="#">To My</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown</a>
-                            </li>
-                            <li>
-                                <a href="#">Hello There</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">Welcome</a>
-                            </li>
-                            <li>
-                                <a href="#">To My</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="codex"><strong>Code:</strong></div>
-<pre class="prettyprint lang-html">
-&lt;div class=&quot;dropdown&quot;&gt;
-  &lt;a class=&quot;dropdown-trigger&quot; data-toggle=&quot;dropdown&quot; href=&quot;#&quot;&gt;
-    Dropdown trigger
-  &lt;/a&gt;
-  &lt;div class=&quot;dropdown-container&quot;&gt;
-    &lt;ul class=&quot;dropdown-menu&quot; role=&quot;menu&quot;&gt;
-      &lt;li&gt;
-        &lt;a href=&quot;#&quot;&gt;Hello There&lt;/a&gt;
-      &lt;/li&gt;
-      &lt;li class=&quot;divider&quot;&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-  &lt;/div&gt;
-&lt;/div&gt;
-</pre>
-        </div>-->
+            </div><!-- /CURRENCY -->
 
+        </div>
     </div>
 
     <script src="public/js/vendor-bundle.js"></script>
