--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Off-screen nav: mobile -->
     <nav>
-        <div class="small-12 small-centered medium-3 large-3 columns sidebar-app fixed">
+        <div class="small-12 small-centered medium-3 large-3 columns sidebar-app fixed show-for-medium-up">
             <div class="show-for-small-only"></div>
             <ul id="sidebarID">
                 <li class="hovered">
@@ -44,31 +44,38 @@
         </div>
     </nav>
 
-    <header>
-        <!-- TOP NAV -->
-        <div class="row">
-            <!-- LOGO -->
-            <div class="small-5 columns">
-                <a href="#">
-                    <div class="logo"></div>
-                </a>
-            </div>
-            <!-- DESKTOP NAV -->
-            <nav>
-                <div class="small-7 columns">
-                    <div class="top-nav right desktop-menu show-for-medium-up">
-                        <a href="index.html" style="font-size:13px;">CSS</a>
-                        <a href="javascript.html">JS</a>
-                        <a href="components.html">Components</a>
-                    </div>
-                    <!-- BURGER DISPLAYS ON SMALL (TABLET / SMARTPHONE) -->
-                    <div class="right mobile-menu show-for-small-only">
-                        <div class="top-nav">
-                            <a href="#" class="box-shadow-menu"></a>
+    <header role="main">
+        <div class=" site-header">
+            <div class="row">
+                <!-- LOGO -->
+                <div class="small-5 columns">
+                    <a href="#">
+                        <div class="logo"></div>
+                    </a>
+                </div>
+                <!-- DESKTOP NAV -->
+                <nav>
+                    <div class="small-7 columns">
+                        <ul class="top-nav right desktop-menu show-for-medium-up">
+                            <li>
+                                <a href="index.html">CSS</a>
+                            </li>
+                            <li>
+                                <a href="javascript.html">JS</a>
+                            </li>
+                            <li>
+                                <a href="components.html">Components</a>
+                            </li>
+                        </ul>
+                        <!-- touch icon -->
+                        <div class="right mobile-menu show-for-small-only">
+                            <div class="top-nav">
+                                <a href="#" class="box-shadow-menu">&#9776;</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -100,7 +107,7 @@
                 <div class="codex">
                     <h3>Code:</h3>
 <pre class="prettyprint lang-html">
-&lt;h2&gt;The quick brown fox jumped over the lazy dog.&lt;/h2&gt;
+&lt;h1&gt;The quick brown fox jumped over the lazy dog.&lt;/h1&gt;
 &lt;h2&gt;The quick brown fox jumped over the lazy dog.&lt;/h2&gt;
 &lt;h3&gt;The quick brown fox jumped over the lazy dog.&lt;/h3&gt;
 </pre>
@@ -237,6 +244,123 @@
 </pre>
                 </div>
             </div><!-- /CURRENCY -->
+
+            <h1 id="dropdowns" class="trackOffset">Dropdowns</h1>
+            <div class="dropdowns group margin-bottom">
+                <div class="dropdown floatLeft">
+                    <a class="dropdown-trigger " data-toggle="dropdown" href="#">
+                        Dropdown trigger
+                    </a>
+                    <div class="dropdown-container">
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="#">Hello There</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">Welcome</a>
+                            </li>
+                            <li>
+                                <a href="#">To My</a>
+                            </li>
+                            <li>
+                                <a href="#">Dropdown</a>
+                            </li>
+                            <li>
+                                <a href="#">Hello There</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">Welcome</a>
+                            </li>
+                            <li>
+                                <a href="#">To My</a>
+                            </li>
+                            <li>
+                                <a href="#">Dropdown</a>
+                            </li>
+                            <li>
+                                <a href="#">Hello There</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">Welcome</a>
+                            </li>
+                            <li>
+                                <a href="#">To My</a>
+                            </li>
+                            <li>
+                                <a href="#">Dropdown</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="dropdown floatLeft second">
+                    <a class="dropdown-trigger " data-toggle="dropdown" href="#">
+                        Dropdown trigger
+                    </a>
+                    <div class="dropdown-container">
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="#">Hello There</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">Welcome</a>
+                            </li>
+                            <li>
+                                <a href="#">To My</a>
+                            </li>
+                            <li>
+                                <a href="#">Dropdown</a>
+                            </li>
+                            <li>
+                                <a href="#">Hello There</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">Welcome</a>
+                            </li>
+                            <li>
+                                <a href="#">To My</a>
+                            </li>
+                            <li>
+                                <a href="#">Dropdown</a>
+                            </li>
+                            <li>
+                                <a href="#">Hello There</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">Welcome</a>
+                            </li>
+                            <li>
+                                <a href="#">To My</a>
+                            </li>
+                            <li>
+                                <a href="#">Dropdown</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="codex"><strong>Code:</strong></div>
+<pre class="prettyprint lang-html">
+&lt;div class=&quot;dropdown&quot;&gt;
+  &lt;a class=&quot;dropdown-trigger&quot; data-toggle=&quot;dropdown&quot; href=&quot;#&quot;&gt;
+    Dropdown trigger
+  &lt;/a&gt;
+  &lt;div class=&quot;dropdown-container&quot;&gt;
+    &lt;ul class=&quot;dropdown-menu&quot; role=&quot;menu&quot;&gt;
+      &lt;li&gt;
+        &lt;a href=&quot;#&quot;&gt;Hello There&lt;/a&gt;
+      &lt;/li&gt;
+      &lt;li class=&quot;divider&quot;&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+</pre>
+
 
         </div>
     </div>
