added highlightjs to local instead of google-prettify

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="http://www.freepeople.com/favicon.ico">
     <link rel="stylesheet" href="public/css/main.css">
     <link rel="stylesheet" href="public/css/app.css">
-    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&amp;skin=desert"></script>
+    <link rel="stylesheet" href="public/css/solarized_light.css">
     <script src="public/js/modernizr.js"></script>
 </head>
 <body>
@@ -91,7 +91,7 @@
                 <p class="serif">The quick brown fox jumped over the lazy dog.</p>
                 <div class="codex">
                     <h3>Code:</h3>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;p&gt;The quick brown fox jumped over the lazy dog.&lt;/p&gt;
 &lt;p class="serif"&gt;The quick brown fox jumped over the lazy dog.&lt;/p&gt;
 </pre>
@@ -106,7 +106,7 @@
                 <h3>The quick brown fox jumped over the lazy dog.</h3>
                 <div class="codex">
                     <h3>Code:</h3>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;h1&gt;The quick brown fox jumped over the lazy dog.&lt;/h1&gt;
 &lt;h2&gt;The quick brown fox jumped over the lazy dog.&lt;/h2&gt;
 &lt;h3&gt;The quick brown fox jumped over the lazy dog.&lt;/h3&gt;
@@ -121,7 +121,7 @@
                 <p>The quick brown fox jumped over the <a href="#">lazy dog</a>.</p>
                 <div class="codex">
                     <h3>Code:</h3>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;p&gt;The &lt;a href="#"&gt;quick brown fox&lt;/a&gt; jumped over the lazy dog.&lt;/p&gt;
 &lt;p&gt;The quick brown fox jumped over the &lt;a href="#"&gt;lazy dog&lt;/a&gt;.&lt;/p&gt;
 </pre>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="codex">
                     <h3>Code:</h3>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;div class="dark-gray-border-box"&gt;
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
 &lt;/div&gt;
@@ -159,7 +159,7 @@
                 <button class="white-button">Sign Up</button>
                 <div class="codex">
                     <h3>Code:</h3>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;button&gt;Submit My Order&lt;/button&gt;
 &lt;button class="white-button"&gt;Sign Up&lt;/button&gt;
 </pre>
@@ -176,7 +176,7 @@
                 <textarea rows="5" id="guide-address"></textarea>
                 <div class="codex">
                     <h3>Code:</h3>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;button&gt;Submit My Order&lt;/button&gt;
 &lt;button class="white-button"&gt;Sign Up&lt;/button&gt;
 </pre>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="codex">
                     <h3>Code:</h3>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;div class="alertMsg"&gt;
     &lt;a href="#" class="alert--close"&gt;X&lt;/a&gt;
     &lt;span&gt;Example of standard alert message.&lt;/span&gt;
@@ -231,7 +231,7 @@
                 </div>
                 <div class="codex">
                     <h3>Code:</h3>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;div&gt;
     &lt;span class="price--symbol"&gt;$&lt;/span&gt;&lt;span class="price--dollars"&gt;49&lt;/span&gt;&lt;span class="price--cents"&gt;.99&lt;/span&gt;
 &lt;/div&gt;
@@ -345,7 +345,7 @@
                 </div>
             </div>
             <div class="codex"><strong>Code:</strong></div>
-<pre class="prettyprint lang-html">
+<pre class="lang-html">
 &lt;div class=&quot;dropdown&quot;&gt;
   &lt;a class=&quot;dropdown-trigger&quot; data-toggle=&quot;dropdown&quot; href=&quot;#&quot;&gt;
     Dropdown trigger
@@ -364,7 +364,7 @@
 
         </div>
     </div>
-
+    <script src="public/js/highlight.pack.js"></script>
     <script src="public/js/vendor-bundle.js"></script>
     <script src="public/js/app.js"></script>
 </body>
