--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Home
 ---
 
 <div>
-	{% for post in site.categories['projects'] %}
+	{% for post in site.categories[''] %}
 	{% endfor %}
 </div>
