got links working for sub pages and the sub navigation

--- a/guidelines/index.html
+++ b/guidelines/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Home
 ---
 <div class="large-12 columns sub-nav">
 	<div class="row">
@@ -16,4 +17,3 @@ layout: default
 <div class="column three-fourths">
 	{{ content }}
 </div>
-
